--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,18 @@
             <artifactId>postgresql</artifactId>
             <version>9.4-1204-jdbc41</version>
         </dependency>
+        <dependency>
+            <groupId>org.glassfish.jersey.test-framework.providers</groupId>
+            <artifactId>jersey-test-framework-provider-jetty</artifactId>
+            <version>${jersey.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>6.8.8</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
     <properties>
         <jersey.version>2.26</jersey.version>
